--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <title></title>
@@ -13,13 +14,17 @@
 
 <body>
   <header class="">
-    <p>header</p>
+    <ul>
+      Contact Us On +91 40 66217777
+      <li><i class="fa fa-facebook" style="font-size:24px;color:gray;"></i></li>
+      <li><i class="fa fa-google-plus" style="font-size:24px;color:gray;"></i></li>
+      <li><i class="fa fa-twitter" style="font-size:24px;color:gray"></i></li>
+    </ul>
   </header>
   <div class="navdiv">
     <nav class="topnav">
-
       <ul>
-        <li> <a href=""><img src="logo.png"></a> </li>
+        <img class="logo" src="img/log.png">
         <li><a class="nav" href="#">Electronics</a></li>
         <li><a class="nav" href="#">men</a></li>
         <li><a class="nav" href="#">women</a></li>
@@ -30,57 +35,97 @@
     </nav>
   </div>
   <section>
-    <h1>Sign Up/ Sign In</h1>
+    <ul>
+      Sign Up/Sign In
+      <li>Sign Up or Sign In </li>
+      <li> <a href="#">Home</a> </li>
+    </ul>
+    </div>
   </section>
   <div class="bodydiv">
     <div class="container-fluid">
       <div class="row">
         <div class="signup">
-          <div class="col-md-6" style=padding-left:10%;">
-            <h1>Sign Up</h1>
+          <div class="col-md-6" "style=padding-left:10%;">
+            <h3>Sign Up</h3>
             <p>Not Our Registerd Customer Yet?</p>
-            <p>Resize the browser window to see the effect.</p>
-            <form class="" action="" method="post">
-            <input type="Name" name="Name" value="Name">
+            <p>With registration with us new world of fashion, fantastic discount and much more opens to you! The whole process will not take you more than a minute!</p>
+            <p2>If you have any questions , please feel free to contact us, our customer service is working for you 24/7</p2>
+            <form class="" action="" method="post">Name
+              <input type="Name" name="Name" value="">
             </form>
-            <form class="" action="" method="post">
-              <input type="email" name="Name" value="Email">
+            <form class="" action="" method="post">Email
+              <input type="email" name="Name" value="">
             </form>
-            <form class="" action="" method="post">
-              <input type="password" name="Name" value="Password">
+            <form class="" action="" method="post">Password
+              <input type="password" name="Name" value="">
             </form>
-            <input type="submit" value="Register">
+            <input type="submit" value="Register" style="width: 40%; margin-left: 30%">
           </div>
 
         </div>
-        <div class="col-md-6" style="padding-left:10%;">
-          <h1>Sign Up</h1>
-          <p>Not Our Registerd Customer Yet?</p>
-          <p>Resize the browser window to see the effect.</p>
-          <form class="" action="" method="post">
-            <input type="email" name="Name" value="Email">
+        <div class="col-md-6" style="padding-left:%;">
+          <h3>Sign In</h3>
+          <p>Already Our Customer</p>
+          <p>If you have any questions , please feel free to contact us, our customer service is working for you 24/7</p>
+          <form class="" action="" method="post">Email
+            <input type="email" name="Name" value="">
           </form>
-          <form class="" action="" method="post">
-            <input type="password" name="Name" value="Password">
+          <form class="" action="" method="post">Password
+            <input type="password" name="Name" value="">
           </form>
-          <input type="submit" value="login">
+          <input type="submit" value="login" style="width: 40%; margin-left: 30%">
         </div>
       </div>
     </div>
 
+
+
+
   </div>
-  <div class="grid2">
+  <div class="grid 2">
     <div class="grid-container">
-  <div class="grid-item">1</div>
-  <div class="grid-item">2</div>
-  <div class="grid-item">3</div>
-</div>
+      <div class="item4">
+        <strong>About Us</strong><br>Pellentesque habitant morbi tristique senectus et <br>
+        netus et malesuada fames ac turpis egestas <br>
+        <hr>
+        <strong>Join Our Monthly Newletter</strong>
+        <form class="" method="post">
+          <input type="text" name="" value="Subscribe">
+        </form>
+
+      </div>
+      <div class="item5">
+      <strong>Blog</strong> <br>
+      <img src="img/detailsquare1.jpg" alt="" style="width: 30px"> blog post name <br>
+      <img src="img/detailsquare2.jpg" alt="" style="width: 30px"> blog post name <br>
+      <img src="img/detailsquare3.jpg" alt="" style="width: 30px"> blog post name
+      </div>
+      <div class="item6">
+        <strong>Contact</strong> <br>
+        TechAspect Solution Pvt.ltd. <br>
+        Plot No. 38, N Height, 3rd Floor <br>
+        Hitech City Phase 2, Madhapur <br>
+        Hyderabad , Telangana-500081 <br>
+        India
+      </div>
+      <div class="item7">
+        <img src="img/detailsquare1.jpg" alt="" style="width: 30px">
+        <img src="img/detailsquare2.jpg" alt="" style="width: 30px">
+        <img src="img/detailsquare3.jpg" alt="" style="width: 30px">
+        <br>
+        <img src="img/detailsquare1.jpg" alt="" style="width: 30px">
+        <img src="img/detailsquare2.jpg" alt="" style="width: 30px">
+        <img src="img/detailsquare3.jpg" alt="" style="width: 30px">
+      </div>
+    </div>
+  </div>
 
 
   </div>
   <div class="footer">
     <footer>
-      Developed By Dalit Mishra
+      <p>@2019 TechAspect Solution Private Limited.</p>
     </footer>
 
   </div>
